...
    // for (var reaction in interactions.reactions) {
    //   developer.log('リアクション: userId=${reaction.userId}, type=${reaction.type}');
    // }

    return Scaffold(
      appBar: AppBar(
        title: const Text('予定の詳細'),
        actions: [
          if (currentSchedule.ownerId == authStateAsync.value?.user?.id) ...[
            Padding(
              padding: const EdgeInsets.only(right: 8),
              child: IconButton(
                icon: const Icon(Icons.edit),
...
                                                Icons.delete,
                                                size: 16,
                                                color: Colors.red,
                                              ),
                                              SizedBox(width: 8),
                                              Text(
                                                '削除',
                                                style: TextStyle(
                                                  color: Colors.red,
                                                ),
                                              ),
                                            ],
                                          ),
...
