...

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final vm = ref.watch(myPageViewModelProvider);
    return Scaffold(
        appBar: AppBar(
            title: const Text('マイページ'),
            centerTitle: true,
            backgroundColor: Theme.of(context).primaryColor),
        body: SingleChildScrollView(
            padding: const EdgeInsets.all(20),
            child: Column(children: [
              // ignore: prefer_const_literals_to_create_immutables
...
                      child: OutlinedButton(
                          onPressed: () {
                            vm.logout();
                          },
                          onLongPress: () {},
                          child: const Text(
                            'ログアウト',
                            style: TextStyle(color: Color(0xFF1a0dab)),
                          )),
                    ),
                  ],
                ),
              ),
...
